adding one more column to store the short key

--- a/app/views/links/_form.html.haml
+++ b/app/views/links/_form.html.haml
@@ -15,5 +15,8 @@
   .field
     = f.label :visits_count
     = f.number_field :visits_count
+  .field
+    = f.label :short_key
+    = f.text_field :short_key
   .actions
     = f.submit 'Save'
