--- a/app/views/links/show.html.haml
+++ b/app/views/links/show.html.haml
@@ -9,6 +9,9 @@
 %p
   %b Visits count:
   = @link.visits_count
+%p
+  %b Short key:
+  = @link.short_key
 
 = link_to 'Edit', edit_link_path(@link)
 \|
