displays short url in show view

--- a/app/views/links/show.html.haml
+++ b/app/views/links/show.html.haml
@@ -10,8 +10,8 @@
   %b Visits count:
   = @link.visits_count
 %p
-  %b Short key:
-  = @link.short_key
+  %b Short URL:
+  = @short_url
 
 = link_to 'Edit', edit_link_path(@link)
 \|
